hphp/test/slow/dict/dict-bad-init.php.expectf

Fatal error: syntax error, unexpected ',' in %s/dict-bad-init.php on line 4
